# ts-analysis

./: .envrc  .gitattributes  .gitignore  .tmux.yaml  Makefile  Pipfile  README.md  pyproject.toml  pyrightconfig.json
forecasting_principles_practice/: 01-fpp-intro.R  01-rmarkdown-example.Rmd  02-ts-graphics.R  03-ts-decomposition.R  04-ts-features.R  05-forecaster-toolbox.R  07-time-series-regression.R  README.md
notebooks/kats/: 01-basics.ipynb  03-detection.ipynb  kats_101_basics.ipynb
notebooks/sktime/: 02-forecasting.ipynb  README.md  utils.py
notebooks/ts-pycon-2021/: 01-time-series-analysis.ipynb  02-seasonality-modeling.ipynb  03-feature-engineering.ipynb  get-notebooks-data.py
notebooks/tsa-2017/: 01-dates-times.ipynb  02-working-with-time-data.ipynb  03-resampling.ipynb  04-moving-window-functions.ipynb  05-self-correlation.ipynb  06-AR_MA-process.ipynb  07-forecasting.ipynb  AirPassengers.csv  README.md  sp500.csv
python/: ConfigNumParser.py  data.txt  parse_infos.py
r-tutorials/: README.md
r-tutorials/data-wrangling/: 01-dplyr-intro.R  02-ggplot-intro.R
r-tutorials/r-introduction/: 01-introduction.R  02-packages-tutorial.R  03-basic-graphics.R  04-bar-charts.R  05-histograms.R  06-scatterplots.R  07-overlay-plots.R  08-basic-statistics.R  09-more-basic-statistics.R  10-data-formats.R  10-selecting-cases.R  11-adhoc-data.R  11-factors.R  12-import-data.R  13-hierarchical-clustering.R  14-principal-components.R  15-regression.R  example-data.csv  example-data.txt
scripts/: jupyter-lab.sh
ts_analysis/: __init__.py  prophet_tutorial.py
